modules/lib/dependencies/dav1d/cobalt_dav1d_shim.h

/*
 * Pixel layout selectors returned by cobalt_dav1d_pic_layout. The values match
 * dav1d's Dav1dPixelLayout enumerators so the meaning is unambiguous, but the
 * enum itself never crosses the boundary:
 *
 *   0 = monochrome (I400)
 *   1 = 4:2:0 (I420)
 *   2 = 4:2:2 (I422)
 *   3 = 4:4:4 (I444)
 */
#define COBALT_DAV1D_LAYOUT_I400 0
#define COBALT_DAV1D_LAYOUT_I420 1
#define COBALT_DAV1D_LAYOUT_I422 2
#define COBALT_DAV1D_LAYOUT_I444 3
/*
 * Status codes returned by the open/send/get/close entry points. These are
 * STABLE shim-level values, NOT raw dav1d returns: the shim maps dav1d's negated
 * POSIX error codes (whose numeric values vary by host errno layout) onto this
 * fixed set so the Java side compares against host-independent constants.
 *
 *   COBALT_DAV1D_OK         0   operation succeeded
 *   COBALT_DAV1D_EAGAIN    -1   send: input not yet consumed, drain pictures;
 *                               get: no picture ready, feed more input
 *   COBALT_DAV1D_EINVAL    -2   invalid argument supplied to the shim or dav1d
 *   COBALT_DAV1D_ENOMEM    -3   allocation failed (shim or dav1d)
 *   COBALT_DAV1D_ERROR     -4   any other dav1d decode error
 *
 * COBALT_DAV1D_EAGAIN is the one code callers must branch on (it drives the
 * send/drain decode loop); the rest collapse the various dav1d failures into a
 * stable, portable surface.
 */
#define COBALT_DAV1D_OK      0
/**
 * Returns the dav1d library version string.
 *
 * Forwards to dav1d_version. The returned pointer is owned by dav1d and is valid
 * for the lifetime of the process; the caller must not free it.
 *
 * @return a NUL-terminated version string such as "1.4.3".
 */
const char *cobalt_dav1d_version(void);
/**
 * Opens an AV1 decoder instance configured for the given thread count.
 *
 * The wrapper initializes a Dav1dSettings with dav1d_default_settings, stamps
 * its n_threads field from nThreads (a value of 0 lets dav1d pick a thread count
 * from the host's logical core count, clamped C-side to dav1d's supported
 * range), then calls dav1d_open. The created decoder is returned through outCtx
 * as an opaque handle. The Dav1dSettings never reaches Java.
 *
 * @param nThreads number of decode threads, or 0 to let dav1d choose.
 * @param outCtx   receives the created decoder handle on success, or is left
 *                 holding NULL on failure; must not be NULL.
 * @return COBALT_DAV1D_OK on success, COBALT_DAV1D_EINVAL for a NULL outCtx,
 *         COBALT_DAV1D_ENOMEM on allocation failure, otherwise
 *         COBALT_DAV1D_ERROR if dav1d_open fails.
 */
int32_t cobalt_dav1d_open(int32_t nThreads, void **outCtx);
/**
 * Feeds one or more AV1 Open Bitstream Units to the decoder.
 *
 * The wrapper allocates a Dav1dData of len bytes with dav1d_data_create, copies
 * the supplied bitstream into it, and calls dav1d_send_data; on success dav1d
 * takes ownership of that reference. A return of COBALT_DAV1D_EAGAIN means the
 * decoder cannot accept this packet until at least one picture is drained with
 * cobalt_dav1d_get_picture; the caller must retry the same data after draining.
 * The Dav1dData never reaches Java.
 *
 * @param ctx  the decoder handle from cobalt_dav1d_open.
 * @param data pointer to the AV1 bitstream bytes; must not be NULL when len > 0.
 * @param len  number of bytes at data.
 * @return COBALT_DAV1D_OK on success, COBALT_DAV1D_EAGAIN if the packet must be
 *         retried after draining, COBALT_DAV1D_EINVAL for an invalid argument,
 *         COBALT_DAV1D_ENOMEM if the data buffer could not be allocated,
 *         otherwise COBALT_DAV1D_ERROR for a dav1d_send_data decode error.
 */
int32_t cobalt_dav1d_send_data(void *ctx, const uint8_t *data, size_t len);
/**
 * Retrieves the next decoded picture from the decoder.
 *
 * The wrapper heap-allocates a Dav1dPicture, calls dav1d_get_picture into it,
 * and on success returns that allocation through outPic as an opaque handle; the
 * caller assumes ownership and must release it with cobalt_dav1d_picture_unref.
 * A return of COBALT_DAV1D_EAGAIN means no picture is ready and more input must
 * be supplied with cobalt_dav1d_send_data; to drain buffered frames at end of
 * stream, call this until it returns COBALT_DAV1D_EAGAIN. On any non-success
 * return outPic is left holding NULL and the internal allocation is freed.
 *
 * @param ctx    the decoder handle from cobalt_dav1d_open.
 * @param outPic receives the decoded picture handle on success, or is left
 *               holding NULL otherwise; must not be NULL.
 * @return COBALT_DAV1D_OK on success, COBALT_DAV1D_EAGAIN if no picture is ready,
 *         COBALT_DAV1D_EINVAL for a NULL outPic, COBALT_DAV1D_ENOMEM if the
 *         picture holder could not be allocated, otherwise COBALT_DAV1D_ERROR
 *         for a dav1d_get_picture decode error.
 */
int32_t cobalt_dav1d_get_picture(void *ctx, void **outPic);
/**
 * Returns a plane data pointer of a decoded picture.
 *
 * Reads Dav1dPicture.data[plane] of the opaque picture handle. Plane 0 is luma
 * (Y), plane 1 is the first chroma plane (U/Cb), plane 2 is the second chroma
 * plane (V/Cr). For 8 bpc the bytes are samples; for 10 bpc they are little
 * words with the sample in the low 10 bits. The pointer addresses dav1d-owned
 * memory valid until cobalt_dav1d_picture_unref is called on the handle.
 *
 * @param pic   the picture handle from cobalt_dav1d_get_picture.
 * @param plane the plane index, 0, 1 or 2.
 * @return the plane base pointer, or NULL for a NULL handle or out-of-range
 *         plane index.
 */
uint8_t *cobalt_dav1d_pic_plane(void *pic, int32_t plane);