modules/lib/src/main/java/com/github/auties00/cobalt/calls/media/video/codec/av1/bindings/CobaltDav1d.java

// Generated by jextract

package com.github.auties00.cobalt.calls.media.video.codec.av1.bindings;

import java.lang.invoke.*;
import java.lang.foreign.*;
import java.nio.ByteOrder;
import java.util.*;
import java.util.function.*;
import java.util.stream.*;

import static java.lang.foreign.ValueLayout.*;
import static java.lang.foreign.MemoryLayout.PathElement.*;

public class CobaltDav1d {

    CobaltDav1d() {
        // Should not be called directly
    }

    static final Arena LIBRARY_ARENA = Arena.ofAuto();
    static final boolean TRACE_DOWNCALLS = Boolean.getBoolean("jextract.trace.downcalls");

    static void traceDowncall(String name, Object... args) {
         String traceArgs = Arrays.stream(args)
                       .map(Object::toString)
                       .collect(Collectors.joining(", "));
         System.out.printf("%s(%s)\n", name, traceArgs);
    }

    static MemorySegment findOrThrow(String symbol) {
        return SYMBOL_LOOKUP.find(symbol)
            .orElseThrow(() -> new UnsatisfiedLinkError("unresolved symbol: " + symbol));
    }

    static MethodHandle upcallHandle(Class<?> fi, String name, FunctionDescriptor fdesc) {
        try {
            return MethodHandles.lookup().findVirtual(fi, name, fdesc.toMethodType());
        } catch (ReflectiveOperationException ex) {
            throw new AssertionError(ex);
        }
    }

    static MemoryLayout align(MemoryLayout layout, long align) {
        return switch (layout) {
            case PaddingLayout p -> p;
            case ValueLayout v -> v.withByteAlignment(align);
            case GroupLayout g -> {
                MemoryLayout[] alignedMembers = g.memberLayouts().stream()
                        .map(m -> align(m, align)).toArray(MemoryLayout[]::new);
                yield g instanceof StructLayout ?
                        MemoryLayout.structLayout(alignedMembers) : MemoryLayout.unionLayout(alignedMembers);
            }
            case SequenceLayout s -> MemoryLayout.sequenceLayout(s.elementCount(), align(s.elementLayout(), align));
        };
    }

    static final SymbolLookup SYMBOL_LOOKUP = SymbolLookup.loaderLookup()
            .or(Linker.nativeLinker().defaultLookup());

    public static final ValueLayout.OfBoolean C_BOOL = ValueLayout.JAVA_BOOLEAN;
    public static final ValueLayout.OfByte C_CHAR = ValueLayout.JAVA_BYTE;
    public static final ValueLayout.OfShort C_SHORT = ValueLayout.JAVA_SHORT;
    public static final ValueLayout.OfInt C_INT = ValueLayout.JAVA_INT;
    public static final ValueLayout.OfLong C_LONG_LONG = ValueLayout.JAVA_LONG;
    public static final ValueLayout.OfFloat C_FLOAT = ValueLayout.JAVA_FLOAT;
    public static final ValueLayout.OfDouble C_DOUBLE = ValueLayout.JAVA_DOUBLE;
    public static final AddressLayout C_POINTER = ValueLayout.ADDRESS
            .withTargetLayout(MemoryLayout.sequenceLayout(java.lang.Long.MAX_VALUE, JAVA_BYTE));
    public static final ValueLayout.OfLong C_LONG = ValueLayout.JAVA_LONG;
    private static final int COBALT_DAV1D_LAYOUT_I400 = (int)0L;
    /**
     * {@snippet lang=c :
     * #define COBALT_DAV1D_LAYOUT_I400 0
     * }
     */
    public static int COBALT_DAV1D_LAYOUT_I400() {
        return COBALT_DAV1D_LAYOUT_I400;
    }
    private static final int COBALT_DAV1D_LAYOUT_I420 = (int)1L;
    /**
     * {@snippet lang=c :
     * #define COBALT_DAV1D_LAYOUT_I420 1
     * }
     */
    public static int COBALT_DAV1D_LAYOUT_I420() {
        return COBALT_DAV1D_LAYOUT_I420;
    }
    private static final int COBALT_DAV1D_LAYOUT_I422 = (int)2L;
    /**
     * {@snippet lang=c :
     * #define COBALT_DAV1D_LAYOUT_I422 2
     * }
     */
    public static int COBALT_DAV1D_LAYOUT_I422() {
        return COBALT_DAV1D_LAYOUT_I422;
    }
    private static final int COBALT_DAV1D_LAYOUT_I444 = (int)3L;
    /**
     * {@snippet lang=c :
     * #define COBALT_DAV1D_LAYOUT_I444 3
     * }
     */
    public static int COBALT_DAV1D_LAYOUT_I444() {
        return COBALT_DAV1D_LAYOUT_I444;
    }
    private static final int COBALT_DAV1D_OK = (int)0L;
    /**
     * {@snippet lang=c :
     * #define COBALT_DAV1D_OK 0
     * }
     */
    public static int COBALT_DAV1D_OK() {
        return COBALT_DAV1D_OK;
    }

    private static class cobalt_dav1d_version {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltDav1d.C_POINTER    );

        public static final MemorySegment ADDR = CobaltDav1d.findOrThrow("cobalt_dav1d_version");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *cobalt_dav1d_version()
     * }
     */
    public static FunctionDescriptor cobalt_dav1d_version$descriptor() {
        return cobalt_dav1d_version.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *cobalt_dav1d_version()
     * }
     */
    public static MethodHandle cobalt_dav1d_version$handle() {
        return cobalt_dav1d_version.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const char *cobalt_dav1d_version()
     * }
     */
    public static MemorySegment cobalt_dav1d_version$address() {
        return cobalt_dav1d_version.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const char *cobalt_dav1d_version()
     * }
     */
    public static MemorySegment cobalt_dav1d_version() {
        var mh$ = cobalt_dav1d_version.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_dav1d_version");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_dav1d_open {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltDav1d.C_INT,
            CobaltDav1d.C_INT,
            CobaltDav1d.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltDav1d.findOrThrow("cobalt_dav1d_open");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_open(int32_t nThreads, void **outCtx)
     * }
     */
    public static FunctionDescriptor cobalt_dav1d_open$descriptor() {
        return cobalt_dav1d_open.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_open(int32_t nThreads, void **outCtx)
     * }
     */
    public static MethodHandle cobalt_dav1d_open$handle() {
        return cobalt_dav1d_open.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_open(int32_t nThreads, void **outCtx)
     * }
     */
    public static MemorySegment cobalt_dav1d_open$address() {
        return cobalt_dav1d_open.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_open(int32_t nThreads, void **outCtx)
     * }
     */
    public static int cobalt_dav1d_open(int nThreads, MemorySegment outCtx) {
        var mh$ = cobalt_dav1d_open.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_dav1d_open", nThreads, outCtx);
            }
            return (int)mh$.invokeExact(nThreads, outCtx);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_dav1d_send_data {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltDav1d.C_INT,
            CobaltDav1d.C_POINTER,
            CobaltDav1d.C_POINTER,
            CobaltDav1d.C_LONG
        );

        public static final MemorySegment ADDR = CobaltDav1d.findOrThrow("cobalt_dav1d_send_data");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_send_data(void *ctx, const uint8_t *data, size_t len)
     * }
     */
    public static FunctionDescriptor cobalt_dav1d_send_data$descriptor() {
        return cobalt_dav1d_send_data.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_send_data(void *ctx, const uint8_t *data, size_t len)
     * }
     */
    public static MethodHandle cobalt_dav1d_send_data$handle() {
        return cobalt_dav1d_send_data.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_send_data(void *ctx, const uint8_t *data, size_t len)
     * }
     */
    public static MemorySegment cobalt_dav1d_send_data$address() {
        return cobalt_dav1d_send_data.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_send_data(void *ctx, const uint8_t *data, size_t len)
     * }
     */
    public static int cobalt_dav1d_send_data(MemorySegment ctx, MemorySegment data, long len) {
        var mh$ = cobalt_dav1d_send_data.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_dav1d_send_data", ctx, data, len);
            }
            return (int)mh$.invokeExact(ctx, data, len);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_dav1d_get_picture {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltDav1d.C_INT,
            CobaltDav1d.C_POINTER,
            CobaltDav1d.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltDav1d.findOrThrow("cobalt_dav1d_get_picture");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_get_picture(void *ctx, void **outPic)
     * }
     */
    public static FunctionDescriptor cobalt_dav1d_get_picture$descriptor() {
        return cobalt_dav1d_get_picture.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_get_picture(void *ctx, void **outPic)
     * }
     */
    public static MethodHandle cobalt_dav1d_get_picture$handle() {
        return cobalt_dav1d_get_picture.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_get_picture(void *ctx, void **outPic)
     * }
     */
    public static MemorySegment cobalt_dav1d_get_picture$address() {
        return cobalt_dav1d_get_picture.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_get_picture(void *ctx, void **outPic)
     * }
     */
    public static int cobalt_dav1d_get_picture(MemorySegment ctx, MemorySegment outPic) {
        var mh$ = cobalt_dav1d_get_picture.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_dav1d_get_picture", ctx, outPic);
            }
            return (int)mh$.invokeExact(ctx, outPic);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_dav1d_pic_plane {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltDav1d.C_POINTER,
            CobaltDav1d.C_POINTER,
            CobaltDav1d.C_INT
        );

        public static final MemorySegment ADDR = CobaltDav1d.findOrThrow("cobalt_dav1d_pic_plane");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
